<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Gyroscope Bandaid</string>
    <string name="action_settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings_intro">All values in radians per second. A value of 1.0 means a rotation of almost 60° per second.</string>
    <string name="xposed_inactive">You do not seem to have Xposed Framework installed. You may check your gyroscope readings, change settings and preview their effect but they won\'t be applied until you install Xposed, enable this module and reboot.</string>
    <string name="module_inactive">Gyroscope Bandaid has not been activated by Xposed. You may check your gyroscope readings, change settings and preview their effect but they won\'t be applied until you enable this module and reboot.</string>
    <string name="x_axis">X axis</string>
    <string name="y_axis">Y axis</string>
    <string name="z_axis">Z axis</string>

    <!-- Settings: Calibration -->
    <string name="calibration_title">Calibration</string>
    <string name="calibration_enabled">Using values below to offset hardware readings by a specified amount.</string>
    <string name="calibration_disabled">No constant offset applied to hardware readings.</string>
    <string name="calibration_change">Change calibration values</string>
    <string name="calibration_summary">X=%.5f Y=%.5f Z=%.5f</string>
    <string name="calibration_perform">Calibrate</string>
    <string name="calibration_dialog_message">Specify values for the X, Y and Z axes manually or click <i>Calibrate</i> to estimate them automatically.</string>
    <string name="calibration_dialog_prepare">Keep your phone still, calibration will start in a few seconds.</string>
    <string name="calibration_dialog_done">Calibration complete, suggested values have been updated.</string>

    <!-- Settings: Inversion -->
    <string name="inversion_title">Inversion</string>
    <string name="inversion_enabled">Inverting some of the axes to correct problems found in a few exotic devices.</string>
    <string name="inversion_disabled">Axes of rotation are oriented correctly by this device.</string>
    <string name="inversion_change">Select which axes to invert</string>
    <string name="inversion_summary_none">None</string>
    <string-array name="inversion_axes_entries">
        <item>@string/x_axis</item>
        <item>@string/y_axis</item>
        <item>@string/z_axis</item>
    </string-array>
    <string-array name="inversion_axes_values">
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>

    <!-- Settings: Smoothing -->
    <string name="smoothing_title">Smoothing</string>
    <string name="smoothing_enabled">Processing consecutive readings with an algorithm to reduce jitter.</string>
    <string name="smoothing_disabled">Treating each sensor reading individually.</string>
    <string name="smoothing_algorithm">Algorithm</string>
    <string-array name="smoothing_algorithm_entries">
        <item>Median</item>
        <item>Mean (running average)</item>
        <item>Low-pass filter</item>
        <item>Additive smoothing (experimental)</item>
    </string-array>
    <string-array name="smoothing_algorithm_values">
        <item>@string/pref_smoothing_algorithm_median</item>
        <item>@string/pref_smoothing_algorithm_mean</item>
        <item>@string/pref_smoothing_algorithm_lowpass</item>
        <item>@string/pref_smoothing_algorithm_addsmooth</item>
    </string-array>
    <string name="smoothing_sample">Number of samples</string>
    <string name="smoothing_alpha">Smoothing strength</string>
    <string name="smoothing_explanation">Select the amount of smoothing to apply. Only used by more advanced filters. Suggested starting point is about half way.</string>

    <!-- Settings: Thresholding -->
    <string name="thresholding_title">Thresholding</string>
    <string name="thresholding_enabled">Interpreting smaller sensor readings as noise and outputting zero instead.</string>
    <string name="thresholding_disabled">Taking into account even smaller sensor readings.</string>
    <string name="thresholding_validation_error">This setting can only take values from 0.0 to infinity.</string>
    <string name="thresholding_static">Static</string>
    <string name="thresholding_static_summary">Require a more dynamic motion for your device to &lt;b>start&lt;/b> reporting movement. &lt;i>Current value: %s.&lt;/i></string>
    <string name="thresholding_dynamic">Dynamic</string>
    <string name="thresholding_dynamic_summary">Require a more dynamic motion for your device to &lt;b>continue&lt;/b> reporting movement. &lt;i>Current value: %s.&lt;/i></string>

    <!-- Settings: Rounding -->
    <string name="rounding_title">Rounding</string>
    <string name="rounding_enabled">Round values to reduce small jitter and reduce CPU load.</string>
    <string name="rounding_disabled">Output computed values as-is.</string>
    <string name="rounding_decimalplaces">Decimal places</string>

    <!-- Status -->
    <string name="status_waiting">Waiting for motion…</string>
    <string name="title_filters">Active filters</string>
    <string name="title_original_values">Raw sensor readings</string>
    <string name="title_processed_values">Processed sensor readings</string>

</resources>