<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.davidcie.gyroscopebandaid.gui.StatusTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/card_padding_inner">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_padding">

                    <ImageView
                        android:id="@+id/icon_filter_status"
                        android:layout_width="14sp"
                        android:layout_height="14sp"
                        android:src="@drawable/ic_about"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:tint="@color/colorPrimary"
                        android:layout_marginEnd="7sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_filters"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary"
                        android:layout_toEndOf="@id/icon_filter_status"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <CheckedTextView
                    android:id="@+id/calibration_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calibration_title"
                    android:checked="true"
                    android:checkMark="@drawable/checkbox"
                    android:checkMarkTint="@android:color/darker_gray"/>

                <CheckedTextView
                    android:id="@+id/inversion_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:splitTrack="false"
                    android:text="@string/inversion_title"
                    android:checkMark="@drawable/checkbox"
                    android:checkMarkTint="@android:color/darker_gray"/>

                <CheckedTextView
                    android:id="@+id/smoothing_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smoothing_title"
                    android:checkMark="@drawable/checkbox"
                    android:checkMarkTint="@android:color/darker_gray"/>

                <CheckedTextView
                    android:id="@+id/thresholding_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thresholding_title"
                    android:checkMark="@drawable/checkbox"
                    android:checkMarkTint="@android:color/darker_gray"/>

                <CheckedTextView
                    android:id="@+id/rounding_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rounding_title"
                    android:checkMark="@drawable/checkbox"
                    android:checkMarkTint="@android:color/darker_gray"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_padding_inner"
                android:paddingStart="@dimen/card_padding_inner"
                android:paddingEnd="@dimen/card_padding_inner">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_padding">

                    <ImageView
                        android:id="@+id/icon_readings_raw"
                        android:layout_width="14sp"
                        android:layout_height="14sp"
                        android:src="@drawable/ic_equals"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:tint="@color/colorPrimary"
                        android:layout_marginEnd="7sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_original_values"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary"
                        android:layout_toEndOf="@id/icon_readings_raw"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextureView
                    android:id="@+id/graph_raw"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginBottom="@dimen/card_padding_inner"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x_axis"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/raw_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/y_axis"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/raw_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/z_axis"
                    android:gravity="start"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/raw_z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <!-- SEPARATOR -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lighter_gray"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageButton
                        android:id="@+id/enable_updates_button"
                        android:layout_width="@dimen/card_button_size"
                        android:layout_height="@dimen/card_button_size"
                        android:layout_toStartOf="@id/enable_numeric_button"
                        android:tint="@color/lighter_gray"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_refresh" />

                    <ImageButton
                        android:id="@+id/enable_numeric_button"
                        android:layout_width="@dimen/card_button_size"
                        android:layout_height="@dimen/card_button_size"
                        android:layout_toStartOf="@+id/enable_graph_button"
                        android:tint="@color/colorPrimary"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_informatics" />

                    <ImageButton
                        android:id="@+id/enable_graph_button"
                        android:layout_width="@dimen/card_button_size"
                        android:layout_height="@dimen/card_button_size"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:tint="@color/colorPrimary"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_plot" />
                </RelativeLayout>

                <!-- BOTTOM BUTTONS -->

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>